--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^7.9.8",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/express-jwt": "^6.0.0",
     "apollo-server-express": "^2.19.2",
+    "cookie-parser": "^1.4.5",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.2",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -37,6 +41,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
